plugins {
    id 'java'
}

group = 'us.donut'
version = '1.2.4'

repositories {
    mavenCentral()

    maven {
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        name = "Spigot"
    }
    maven {
        url = 'https://oss.sonatype.org/content/repositories/snapshots'
        name = 'BungeeCord'
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT'
}

java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:deprecation']
}

def pluginVersion = version.toString()
processResources {
    inputs.property 'version', pluginVersion
    filesMatching('plugin.yml') { expand(version: pluginVersion) }
}
